--- a/matplotlib_graph_guide_all_in_one_en_full_english.ipynb
+++ b/matplotlib_graph_guide_all_in_one_en_full_english.ipynb
@@ -18,8 +18,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "import math\n",
@@ -43,8 +43,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "x = [0,1,2,3,4,5]\n",
@@ -65,8 +65,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "def f(x): return math.sin(x)\n",
@@ -90,8 +90,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "x3 = np.arange(0,10.0+1e-12,0.01)\n",
@@ -111,8 +111,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "fig,axs = plt.subplots(2,2, figsize=(10,6), sharex=True)\n",
@@ -139,8 +139,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "sales = pd.read_csv('sales_sample_en.csv', parse_dates=['date'])\n",
@@ -149,8 +149,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "# Daily sales by category (English category names => legend in English)\n",
@@ -178,8 +178,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "sensor = pd.read_excel('sensor_sample_en.xlsx', engine='openpyxl', parse_dates=['time'])\n",
@@ -188,8 +188,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "fig, ax = plt.subplots(2,1, figsize=(8,6), sharex=True)\n",
@@ -198,7 +198,7 @@
         "plt.tight_layout(); plt.show()\n",
         "# 1-hour mean\n",
         "sensor_idx = sensor.set_index('time')\n",
-        "hourly = sensor_idx.resample('1H').mean()\n",
+        "hourly = sensor_idx.resample('1h').mean()\n",
         "ax = hourly.plot(figsize=(8,4), title='Temperature & Humidity (1-hour mean)')\n",
         "ax.set_xlabel('time'); ax.set_ylabel('value'); plt.tight_layout(); plt.show()\n",
         "# Scatter\n",
@@ -219,12 +219,13 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "missing_rate = sensor.isna().mean()*100\n",
-        "print('Missing rate (%):\n', missing_rate)\n",
+        "print('Missing rate (%):\n",
+        "', missing_rate)\n",
         "sensor_clean = sensor.set_index('time').interpolate(method='time').reset_index()\n",
         "fig, ax = plt.subplots(1,2, figsize=(10,3))\n",
         "ax[0].plot(sensor['time'], sensor['temp_C'], color='#3a86ff'); ax[0].set_title('Temp (before)')\n",
@@ -242,8 +243,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "fig, ax = plt.subplots(figsize=(7,4))\n",
@@ -272,16 +273,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python",
-      "version": "3.12.4",
-      "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
         "version": 3
       },
-      "pygments_lexer": "ipython3",
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
       "nbconvert_exporter": "python",
-      "file_extension": ".py"
+      "pygments_lexer": "ipython3",
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
