--- a/matplotlib_graph_guide_all_in_one_en_full_english.ipynb
+++ b/matplotlib_graph_guide_all_in_one_en_full_english.ipynb
@@ -224,8 +224,7 @@
       "outputs": [],
       "source": [
         "missing_rate = sensor.isna().mean()*100\n",
-        "print('Missing rate (%):\n",
-        "', missing_rate)\n",
+        "print('Missing rate (%):', missing_rate)\n",
         "sensor_clean = sensor.set_index('time').interpolate(method='time').reset_index()\n",
         "fig, ax = plt.subplots(1,2, figsize=(10,3))\n",
         "ax[0].plot(sensor['time'], sensor['temp_C'], color='#3a86ff'); ax[0].set_title('Temp (before)')\n",
